добавлены все недостоющие модули

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "nsd_js_api_proxy",
-  "version": "1.0.12",
+  "version": "1.2.0",
   "main": "./dist/index.js",
   "files": [
-    "dist/"
+    "./dist/"
   ],
   "types": "./dist/index.d.ts",
   "scripts": {
@@ -18,8 +18,5 @@
     "url": "git+https://github.com/exeki/nsd_js_api_proxy.git"
   },
   "homepage": "https://github.com/exeki/nsd_js_api_proxy#readme",
-  "description": "Библиотека, убирающая необходимость писать dev реализацию для элементов, использующих jsApi Naumen Service Desk",
-  "devDependencies": {
-    "@types/node": "^20.12.7"
-  }
+  "description": "Библиотека, убирающая необходимость писать dev реализацию для элементов, использующих jsApi Naumen Service Desk"
 }
