--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nsd_js_api_proxy",
-  "version": "1.2.7",
+  "version": "4.17.5-1",
   "main": "./dist/index.js",
   "files": [
     "./dist/"
